--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "bekiaris_final"
 version = "0.1.0"
 readme = "README.md"
-requires-python = "3.12.9"
+requires-python = "==3.12.9"
 dependencies = [
     "fastapi==0.115.12",
     "pandas==2.2.3",
