--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ dependencies = [
     "fastapi==0.115.12",
     "pandas==2.2.3",
     "pydantic==2.11.4",
-    "pytorch-tabnet==4.1.0",
+    "pytorch-tabnet==4.1.0",    
+    "requests==2.32.3",
     "scikit-learn==1.5.2",
     "tabulate==0.9.0",
     "uvicorn==0.34.2",
